--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "less": "^3.11.2",
     "less-loader": "^6.1.0",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
