--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
-    "postcss-loader": "^3.0.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.2",
     "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.4",
     "less": "^3.11.2",
     "less-loader": "^6.1.0",
+    "postcss": "^7.0.30",
+    "postcss-loader": "^3.0.0",
+    "postcss-px2rem": "^0.3.0",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
